# Hydrus_Embedded

./: .gitignore  CMakeLists.txt  Instructions.md  ReadME.md  docker-compose.yml  rosserial.dockerfile
catkin_ws/: CMakeLists.txt  node.py  package.xml
docker/: docker-compose.yml  entrypoint.sh  rosserial.dockerfile
examples/: Hydrus.ino
examples/Hydrus/: Hydrus.ino
src/: hydrus_rosserial.h  main.cpp  rosserial_hydrus_node.h
src/ROS/: ros_deps.cpp
src/devices/: devices.h  gripper.cpp  pressure_sensor.cpp  thrusters.cpp
src/rosserial_hydrus_node/: ros_embedded_node.cpp  ros_embedded_node.h
